@@ -14,6 +14,7 @@
 * Fix bug in rescan/invalidation for rules that reference lattice values and use
   the <+ or <~ operators (#290)
 * Fix bug in rescan logic for notin operator (#291)
+* Fix bug in notin operators involving self joins (#298)
 * Fix error when output from a notin operator was fed into a lattice
 
 == 0.9.5 / 2012-11-24
